# itera-timesheet-generator

./: .gitignore  README.md  main.py  requirements.txt  sample.xlsx  setup.cfg  timesheet.json
src/: cli_timesheet_from_json.py  cli_timesheet_from_toggl.py  itera_timesheet_workbook.py  timesheet.py  toggl.py
tests/: timesheet_test.py
tmp/: sample.xlsx  timesheet.json  timsheet.xlsx
