[metadata]
name = itera_timesheet_generator
version = 0.1.0
description = Generate itera timseheet xlxs from different sources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martinbaklid/itera-timesheet-generator
author = Maritn Baklid
author_email = mbaklid@icloud.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    identify
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    timesheet-from-json=src.cli_timesheet_from_json:main
    timesheet-from-toggl=src.cli_timesheet_from_toggl:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
